crates/monochange_integration_tests/tests/snapshots/release_values__counter_train_manifest_values.snap
---
source: crates/monochange_integration_tests/tests/release_values.rs
expression: "&manifest.values"
---
{
  "app.build": "4"
}
