crates/monochange_integration_tests/tests/snapshots/release_values__counter_train_reset_counter_file.snap
---
source: crates/monochange_integration_tests/tests/release_values.rs
expression: "read_file(root, \"build.json\")"
---
{ "build": 1 }
