crates/monochange_integration_tests/tests/snapshots/release_values__derived_sources_values.snap
---
source: crates/monochange_integration_tests/tests/release_values.rs
expression: "&manifest.values"
---
{
  "app.artifact": "540682",
  "app.run": "1842",
  "app.tag": "afggm",
  "app.when": "20260919101112"
}
