crates/monochange_integration_tests/tests/snapshots/release_values__display_label_labels.snap
---
source: crates/monochange_integration_tests/tests/release_values.rs
expression: "&manifest.labels"
---
{
  "app": "2026.09.1",
  "lib": "26Q3.1"
}
