crates/monochange_integration_tests/tests/snapshots/release_values__display_label_manifest_shape.snap
---
source: crates/monochange_integration_tests/tests/release_values.rs
expression: shape
---
{
  "has_labels": true,
  "has_values": false,
  "labels": {
    "app": "2026.09.1",
    "lib": "26Q3.1"
  }
}
