crates/monochange_integration_tests/tests/snapshots/release_values__ordinal_chain_labels.snap
---
source: crates/monochange_integration_tests/tests/release_values.rs
expression: "&third.labels"
---
{
  "app": "2026.10.1"
}
