crates/monochange_integration_tests/tests/snapshots/release_values__value_template_counter_file.snap
---
source: crates/monochange_integration_tests/tests/release_values.rs
expression: "read_file(root, \"build.json\")"
---
{ "ios": 8, "android": 42 }
